--- a/ikki.cfg
+++ b/ikki.cfg
@@ -22,7 +22,7 @@ SEGMENTS {
 	FILE3_DAT: load = SIDE1A, run = CHK3, define = yes;
 	
 	# Patches (it would be nice to overwrite segments directly instead of only memory areas with file outputs...)
-	RESET_PATCH:    load = SIDE1A, start = $4b+$000b, type = overwrite;
+	RESET_PATCH:    load = SIDE1A, start = $4b+$0000, type = overwrite;
 	POINTER_PATCH0: load = SIDE1A, start = $4b+$024e, type = overwrite;
 	POINTER_PATCH1: load = SIDE1A, start = $4b+$027f, type = overwrite;
 	POINTER_PATCH2: load = SIDE1A, start = $4b+$0565, type = overwrite;
